MDEV-20505: Server crash on startup beacuse of bad wsrep configuration

Problem was that if user used bad wsrep configuration
we call unireg_abort and in wsrep case there is check
to wsrep_server_state that might not yet be initialized.
Fixed by checking that wsrep_server_state is initialized
before checking it's state.

Changes to be committed:
	modified:   sql/mysqld.cc
	modified:   sql/wsrep_server_state.h